--- a/entregar.html
+++ b/entregar.html
@@ -101,7 +101,7 @@
 
 <script>
 const SUPABASE_URL = "https://jwcgiuhdugjunndfpdjr.supabase.co"; // tu URL
-const SUPABASE_ANON_KEY = "sb_publishable_AGtHYQxPJAAFprt-p4leSg_ZRM6yDKe"; // tu clave anónima
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3Y2dpdWhkdWdqdW5uZGZwZGpyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NTA2NTQsImV4cCI6MjA3ODUyNjY1NH0.llknOTpK1hFMDOjdyDUKUFuiyr0NwwJzNv6YdJbBsRY"; // tu clave anónima
 const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
 // Función principal
