--- a/entregar.html
+++ b/entregar.html
@@ -103,7 +103,6 @@
 const SUPABASE_URL = "https://jwcgiuhdugjunndfpdjr.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3Y2dpdWhkdWdqdW5uZGZwZGpyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NTA2NTQsImV4cCI6MjA3ODUyNjY1NH0.llknOTpK1hFMDOjdyDUKUFuiyr0NwwJzNv6YdJbBsRY";
 
-// 👇 YA NO ROMPE EL OBJETO SUPABASE
 const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
 // Función principal
@@ -122,7 +121,7 @@ async function init() {
 
 async function cargarSolicitudes(email) {
     const { data: solicitudes, error } = await supabaseClient
-        .from('solicitud')
+        .from('solicitudes')
         .select('*')
         .eq('email', email)
         .eq('estado', 'Pendiente');
@@ -214,7 +213,7 @@ async function cargarSolicitudes(email) {
             if (!todosMarcados) return;
 
             const { error: updateError } = await supabaseClient
-                .from('solicitud')
+                .from('solicitudes')
                 .update({
                     estado: 'Entregado',
                     fecha_entrega: new Date().toISOString()
