--- a/admin-test.html
+++ b/admin-test.html
@@ -2,268 +2,155 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Panel de Administración</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Panel de Visualización</title>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
     body {
-        margin: 0;
-        font-family: Arial;
-        background: #eef1f5;
+        font-family: Arial, sans-serif;
+        background: #f3f4f6;
+        padding: 20px;
     }
 
-    /* HEADER */
-    header {
-        background: #1f487e;
-        padding: 15px 20px;
-        color: white;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    header h1 {
-        margin: 0;
-        font-size: 22px;
-    }
-
-    header button {
-        background: #d9534f;
-        padding: 8px 18px;
-        border: none;
-        border-radius: 6px;
-        color: white;
-        font-size: 15px;
-        cursor: pointer;
-    }
-
-    /* CONTENEDOR GENERAL */
-    .container {
-        width: 95%;
-        max-width: 1100px;
-        margin: 25px auto;
-    }
-
-    /* TARJETAS PRINCIPALES */
-    .cards {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        gap: 20px;
+    h2 {
+        margin-top: 40px;
+        color: #333;
     }
 
     .card {
         background: white;
-        padding: 20px;
-        border-radius: 12px;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-    }
-
-    .card h2 {
-        margin-top: 0;
-        color: #1f487e;
-        font-size: 20px;
-    }
-
-    .card .count {
-        font-size: 34px;
-        margin: 10px 0;
-        font-weight: bold;
-    }
-
-    .card button {
-        background: #1f487e;
-        padding: 10px 15px;
-        border-radius: 6px;
-        border: none;
-        color: white;
-        cursor: pointer;
-        margin-top: 10px;
-    }
-
-    /* TABLAS / LISTAS */
-    .mini-list p {
-        margin: 6px 0;
-        font-size: 14px;
-    }
-
-    /* SOLICITUDES */
-    .solicitudes-section {
-        margin-top: 35px;
-    }
-
-    .solicitud {
-        background: white;
-        padding: 18px;
-        border-radius: 12px;
+        padding: 15px;
         margin-bottom: 15px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-
-    .solicitud h3 {
-        margin: 0 0 8px;
-        color: #1f487e;
-    }
-
-    .solicitud p {
-        margin: 3px 0;
-        font-size: 14px;
-    }
-
-    .solicitud .btns {
-        margin-top: 10px;
-    }
-
-    .solicitud button {
-        padding: 8px 12px;
-        border-radius: 6px;
-        border: none;
-        cursor: pointer;
-        margin-right: 8px;
-        font-size: 14px;
-    }
-
-    .btn-detalle {
-        background: #1f487e;
-        color: white;
-    }
-
-    .btn-comentario {
-        background: #5a6268;
-        color: white;
-    }
-
-    /* VENTANA DE COMENTARIOS (VISUAL) */
-    .comentarios-box {
-        background: white;
-        padding: 18px;
-        margin-top: 25px;
-        display: none; /* SE HABILITA CON LÓGICA */
         border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
-    .comentarios-box h3 {
-        margin-top: 0;
-    }
-
-    .comentarios-list p {
-        background: #f1f1f1;
-        padding: 8px;
-        border-radius: 6px;
-        font-size: 14px;
+    .material {
+        background: #eef2ff;
+        padding: 5px 10px;
+        border-radius: 5px;
+        margin: 3px 0;
     }
 
     textarea {
         width: 100%;
-        height: 80px;
-        border-radius: 6px;
-        padding: 10px;
+        padding: 8px;
+        border-radius: 5px;
+        resize: vertical;
     }
 
-    .btn-guardar {
-        background: #28a745;
+    button {
+        background: #4f46e5;
         color: white;
         border: none;
-        padding: 10px 15px;
-        margin-top: 10px;
+        padding: 8px 15px;
         border-radius: 6px;
         cursor: pointer;
+        margin-top: 8px;
     }
-
 </style>
 </head>
+
 <body>
 
-<header>
-    <h1>Panel de Administración</h1>
-    <button>Salir</button>
-</header>
+<h2>Últimas 5 Solicitudes</h2>
+<div id="solicitudes"></div>
 
-<div class="container">
+<h2>Entregas Pendientes de Comentario</h2>
+<div id="entregas"></div>
 
-    <!-- TARJETAS DE RESUMEN -->
-    <div class="cards">
-        
+<script>
+const supabase = supabase.createClient("TU_URL", "TU_ANON_KEY");
+
+// Cargar últimas 5 solicitudes
+async function cargarSolicitudes() {
+    const { data: solicitudes } = await supabase
+        .from("solicitudes")
+        .select("*")
+        .order("id", { ascending: false })
+        .limit(5);
+
+    const cont = document.getElementById("solicitudes");
+    cont.innerHTML = "";
+
+    for (const sol of solicitudes) {
+        // Buscar materiales de esta solicitud
+        const { data: materiales } = await supabase
+            .from("materiales_solicitud")
+            .select("*")
+            .eq("solicitud_id", sol.id);
+
+        let card = `
         <div class="card">
-            <h2>Solicitudes Pendientes</h2>
-            <div class="count">8</div>
-            <div class="mini-list">
-                <p>Juan Pérez - Electricidad II</p>
-                <p>María Soto - Robótica</p>
-                <p>Carlos Ruiz - Automatización</p>
-            </div>
-            <button>Ver Pendientes</button>
-        </div>
+            <strong>ID Solicitud:</strong> ${sol.id}<br>
+            <strong>Usuario:</strong> ${sol.usuario}<br>
+            <strong>Fecha:</strong> ${new Date(sol.fecha).toLocaleString()}<br>
+            <strong>Materiales:</strong><br>
+        `;
 
+        materiales.forEach(m => {
+            card += `<div class="material">${m.material} — ${m.cantidad}</div>`;
+        });
+
+        card += `</div>`;
+        cont.innerHTML += card;
+    }
+}
+
+// Cargar entregas que no tienen comentario
+async function cargarEntregas() {
+    const { data: entregas } = await supabase
+        .from("solicitudes")
+        .select("*")
+        .eq("estado", "entregado")
+        .is("comentario_recepcion", null);
+
+    const cont = document.getElementById("entregas");
+    cont.innerHTML = "";
+
+    entregas.forEach(ent => {
+        cont.innerHTML += `
         <div class="card">
-            <h2>Solicitudes Entregadas</h2>
-            <div class="count">21</div>
-            <div class="mini-list">
-                <p>Pedro Gutiérrez - PLC</p>
-                <p>Camila Vega - Energías</p>
-                <p>Daniel López - Soldadura</p>
-            </div>
-            <button>Ver Entregadas</button>
+            <strong>ID Solicitud:</strong> ${ent.id}<br>
+            <strong>Usuario:</strong> ${ent.usuario}<br>
+            <strong>Fecha:</strong> ${new Date(ent.fecha).toLocaleString()}<br>
+
+            <strong>Comentario de Recepción:</strong><br>
+            <textarea id="comentario_${ent.id}" placeholder="Escribe un comentario..."></textarea>
+            <button onclick="guardarComentario(${ent.id})">Guardar Comentario</button>
         </div>
+        `;
+    });
+}
 
-        <div class="card">
-            <h2>Usuarios</h2>
-            <div class="mini-list">
-                <p><b>Nuevos:</b> 5</p>
-                <p><b>Últimas solicitudes:</b> Pérez, Soto, Ruiz</p>
-                <p><b>Más activos:</b> Juan, Camila</p>
-            </div>
-            <button>Gestión Usuarios</button>
-        </div>
+// Guardar comentario en la BD
+async function guardarComentario(id) {
+    let comentario = document.getElementById(`comentario_${id}`).value;
 
-    </div>
+    const { error } = await supabase
+        .from("solicitudes")
+        .update({ comentario_recepcion: comentario })
+        .eq("id", id);
 
-    <!-- LISTADO DE SOLICITUDES -->
-    <div class="solicitudes-section">
-        <h2>Solicitudes Recientes</h2>
+    if (!error) {
+        alert("Comentario guardado correctamente.");
+        cargarEntregas(); // actualizar la lista
+    } else {
+        alert("Error al guardar el comentario.");
+    }
+}
 
-        <div class="solicitud">
-            <h3>Solicitud #123</h3>
-            <p><b>Docente:</b> Juan Pérez</p>
-            <p><b>Asignatura:</b> Electricidad II</p>
-            <p><b>Fecha:</b> 2025-02-20</p>
-            <p><b>Estado:</b> Pendiente</p>
+// Ejecutar al cargar
+cargarSolicitudes();
+cargarEntregas();
 
-            <div class="btns">
-                <button class="btn-detalle">Ver Detalle</button>
-                <button class="btn-comentario">Agregar Comentario</button>
-            </div>
-        </div>
-
-        <div class="solicitud">
-            <h3>Solicitud #124</h3>
-            <p><b>Docente:</b> María Soto</p>
-            <p><b>Asignatura:</b> Robótica</p>
-            <p><b>Fecha:</b> 2025-02-20</p>
-            <p><b>Estado:</b> Entregada</p>
-
-            <div class="btns">
-                <button class="btn-detalle">Ver Detalle</button>
-                <button class="btn-comentario">Agregar Comentario</button>
-            </div>
-        </div>
-
-    </div>
-
-    <!-- MODAL DE COMENTARIOS (SOLO VISUAL) -->
-    <div class="comentarios-box" id="comentariosBox">
-        <h3>Comentarios de esta Solicitud</h3>
-
-        <div class="comentarios-list">
-            <p>El docente retiró solo parcialmente el material.</p>
-            <p>Faltan herramientas para reponer.</p>
-        </div>
-
-        <textarea placeholder="Agregar comentario..."></textarea>
-        <button class="btn-guardar">Guardar Comentario</button>
-    </div>
-
-</div>
+// Refrescar cada 20 segundos automáticamente
+setInterval(() => {
+    cargarSolicitudes();
+    cargarEntregas();
+}, 20000);
+</script>
 
 </body>
 </html>
+
